Use new Java method getFirst()